  Bug #27289 Transaction is not rolledback when connection close 
  Bug #26147 "User Id" problem during connection creation 
  Bug #27240 Property value characterset not retrieved/fetched in conn wizard 
  Bug #25947 CreateFormat/CreateParameters Column of DataTypes collection incorrect for CHAR 
   
  Other changes
  -------------
  Installer now works if XML comments are found in machine.config

Version 5.0.6 3/21/2007

  Bugs fixed
  ----------
  Bug #27135 MySqlParameterCollection and parameters added with Insert Method 
  Bug #27253 Installer : Company info is different 
  Bug #27187 cmd.Parameters.RemoveAt("Id") will cause an error if the last item is requested   
  Bug #27093 Exception when using large values in IN UInt64 parameters 
  Bug #27221 describe SQL command returns all byte array on MySQL versions older than 4.1.15 
  Bug #26960 Connector .NET 5.0.5 / Visual Studio Plugin 1.1.2 
  
Version 5.0.5 3/5/2007

  Bugs fixed
  ----------
  Bug #25605 BINARY and VARBINARY is returned as a string 
  Bug #25569 UpdateRowSource.FirstReturnedRecord does not work 

Version 5.0.4 *unreleased*

  Bugs fixed
  ----------
  Bug #25443 ExecuteScalar() hangs when more than one bad result 
  Bug #24802 Error Handling 
  Bug #25614 After connection is closed, and opened again UTF-8 characters are not read well 
  Bug #25625 Crashes when calling with CommandType set to StoredProcedure 
  Bug #25458 Opening connection hangs 
  Bug #25651 SELECT does not work properly when WHERE contains UTF-8 characters   
  Bug #25726 MySqlConnection throws NullReferenceException and ArgumentNullException 
  Bug #25609 MySqlDataAdapter.FillSchema 
  Bug #25928 Invalid Registry Entries 
  Bug #25912 selecting negative time values gets wrong results 
  Bug #25906 Typo makes GetSchema with DataTypes collection throw an exception   
  Bug #25907 DataType Column of DataTypes collection does'nt contain the correct CLR Datatype   