@@ -523,7 +523,7 @@ namespace MySql.Data.MySqlClient
 			if (collectionName == null)
 				collectionName = SchemaProvider.MetaCollection;
 
-			return schemaProvider.GetSchema(collectionName, null);
+			return GetSchema(collectionName, null);
 		}
 
 		/// <summary>
@@ -542,10 +542,30 @@ namespace MySql.Data.MySqlClient
                 msg += String.Format(" res={0}", s);
             }
             MessageBox.Show(msg);
-  */          
+  */
 			if (collectionName == null)
 				collectionName = SchemaProvider.MetaCollection;
-			return schemaProvider.GetSchema(collectionName, restrictionValues);
+
+            string[] restrictions = null;
+            if (restrictionValues != null)
+            {
+                restrictions = new string[restrictionValues.Length];
+                for (int x = 0; x < restrictionValues.Length; x++)
+                {
+                    string s = restrictionValues[x];
+                    if (s != null)
+                    {
+                        if (s.StartsWith("`"))
+                            s = s.Substring(1);
+                        if (s.EndsWith("`"))
+                            s = s.Substring(0, s.Length - 1);
+                        restrictions[x] = s;
+                    }
+                }
+            }
+
+			DataTable dt = schemaProvider.GetSchema(collectionName, restrictions);
+            return dt;
 		}
 
 		#endregion
