@@ -627,25 +627,25 @@ namespace MySql.Data.MySqlClient
             {
                 new object[] {"Users", "Name", "", 0},
                 new object[] {"Databases", "Name", "", 0},
-                new object[] {"Tables", "Catalog", "", 0},
-                new object[] {"Tables", "Owner", "", 1},
+                new object[] {"Tables", "Database", "", 0},
+                new object[] {"Tables", "Schema", "", 1},
                 new object[] {"Tables", "Table", "", 2},
                 new object[] {"Tables", "TableType", "", 3},
-                new object[] {"Columns", "Catalog", "", 0},
-                new object[] {"Columns", "Owner", "", 1},
+                new object[] {"Columns", "Database", "", 0},
+                new object[] {"Columns", "Schema", "", 1},
                 new object[] {"Columns", "Table", "", 2},
                 new object[] {"Columns", "Column", "", 3},          
-                new object[] {"Indexes", "Catalog", "", 0},
-                new object[] {"Indexes", "Owner", "", 1},
+                new object[] {"Indexes", "Database", "", 0},
+                new object[] {"Indexes", "Schema", "", 1},
                 new object[] {"Indexes", "Table", "", 2},
                 new object[] {"Indexes", "Name", "", 3},
-                new object[] {"IndexColumns", "Catalog", "", 0},
-                new object[] {"IndexColumns", "Owner", "", 1},
+                new object[] {"IndexColumns", "Database", "", 0},
+                new object[] {"IndexColumns", "Schema", "", 1},
                 new object[] {"IndexColumns", "Table", "", 2},
                 new object[] {"IndexColumns", "ConstraintName", "", 3},
                 new object[] {"IndexColumns", "Column", "", 4},
-                new object[] {"Foreign Keys", "Catalog", "", 0},
-                new object[] {"Foreign Keys", "Owner", "", 1},
+                new object[] {"Foreign Keys", "Database", "", 0},
+                new object[] {"Foreign Keys", "Schema", "", 1},
                 new object[] {"Foreign Keys", "Table", "", 2},
                 new object[] {"Foreign Keys", "Name", "", 3}
             };
